--- a/Kebne/Kebne/en.lproj/Localizable.strings
+++ b/Kebne/Kebne/en.lproj/Localizable.strings
@@ -10,5 +10,5 @@
 "alert.message.regionMonitoringUnavailable" = "Appen kan inte övervaka georegions. Se till att appen får använda platstjänster i telefonens inställningar.";
 "mainView.locationLabel.inOfficeMsg" = "Det ser ut som att du är på kontoret.";
 "mainView.locationLabel.notInOfficeMsg" = "Det ser ut som att du inte är på kontoret.";
-"mainView.titleLabel.greeting" = "Hej"
+"mainView.titleLabel.greeting" = "Hej";
 
