Connected LocationMonitorService and NotificationService through the UserController instance which registers as an OfficeRegionObserver and invokes the proper method of the NotificationService instance. NotificationService will send a local notification right now for testing purpouses when a region boundary crossing is detected.

--- a/Kebne/Kebne/sv.lproj/Localizable.strings
+++ b/Kebne/Kebne/sv.lproj/Localizable.strings
@@ -8,6 +8,8 @@
 
 "alert.title.regionMonitoringUnavailable" = "Tyvärr...";
 "alert.message.regionMonitoringUnavailable" = "Appen kan inte övervaka georegions. Se till att appen alltid får använda platsinfo i telefonens inställningar.";
+"alert.title.userDeclinedNotifications" = "Notiser inte tillåtna";
+"alert.message.userDeclinedNotifications" = "Du kommer inte att få notiser om någon med appen kommer till eller lämnar kontoret. För att ändra, gå in i telefonens inställningar och tillåt appen att visa notiser.";
 "mainView.locationLabel.inOfficeMsg" = "Det ser ut som att du är på kontoret.";
 "mainView.locationLabel.notInOfficeMsg" = "Det ser ut som att du inte är på kontoret.";
 "mainView.titleLabel.greeting" = "Hej";
